--- a/index.html
+++ b/index.html
@@ -1,34 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-
+  <meta charset="UTF-8">
+  <title>Document</title>
 </head>
-
 <body>
-  <div class="logo">
-    <h1>      <div class="wrap">
-            <div class="example-one" data-text="GLITCH">GLITCH</div>
-          </div></h1>
-    <h2>
-      <div class="wrap">
-        <div class="example-one" data-text="|  |">|  |</div>
-      </div>
-    </h2>
-  </div>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-    Necessitatibus harum eligendi, vitae nam voluptatem culpa magnam.
-    Rerum, cumque, quae? Mollitia reiciendis, quos, facilis consequatur
-    magni rerum aliquid ipsum totam at. Rerum, cumque, quae?
-    Mollitia reiciendis, quos, facilis consequatur magni rerum
-    aliquid ipsum totam at magni rerum aliquid ipsum.
-  </p>
-</body>
+  <p>
+    
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam dolore voluptatem aliquid reiciendis ratione suscipit, alias fugit quaerat repellendus fugiat, quis nisi, libero tempore assumenda, adipisci porro pariatur omnis aut.
+    
+     </p>
 
+</body>
 </html>
